--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
 body {
+  font-family: Arial, sans-serif;
+  background-color: #f1f1f1;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.login-container, .dashboard-container {
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+}
+
+/* .header {
+  background-color: #6200ea;
+  color: #fff;
+  padding: 15px;
+  text-align: center;
+} */
+.block{
+  display: block;
+}
+.custom-link{
+  text-decoration: none;
+  color: #333;
+}
+.border-none{
+  border: none;
+}
+
+.h-sidebar-item:hover{
+  background-color: blue;
+  transition: background-color 0.3s ease-in-out;
+  padding: 10px;
+  border-radius: 10px;
+}
+.custom-link:hover{
+  color: #fff;
+}
+.bg-wig{
+  background-color: #f1f1f1;
 }
