--- a/src/index.css
+++ b/src/index.css
@@ -40,15 +40,51 @@ body {
   border: none;
 }
 
-.h-sidebar-item:hover{
+/* .h-sidebar-item:hover{
   background-color: blue;
   transition: background-color 0.3s ease-in-out;
   padding: 10px;
   border-radius: 10px;
-}
-.custom-link:hover{
+} */
+/* .custom-link:hover{
   color: #fff;
-}
+} */
 .bg-wig{
   background-color: #f1f1f1;
+}
+.border-b{
+  border-bottom: 1px solid #333;
+}
+.bg-orange{
+  background-color: orange;
+}
+.text-orange{
+  color: orange;
+  
+}
+.icon-h:hover{
+  color: blue;
+}
+.border-b{
+  border-bottom: 1px solid #cecece;
+}
+.w-35{
+  width: 35%;
+}
+.w-25{
+  width: 25%;
+}
+.p-clear{
+  padding: 0;
+  margin: 0;
+}
+.bg-banafsh{
+  background-color: rgb(0, 179, 255);
+  font-size: 25px;
+}
+.i-blue{
+  color: blue;
+}
+.ml{
+  margin-left: 250px;
 }
