--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,7 @@ body {
 .i-blue{
   color: blue;
 }
-.ml{
-  margin-left: 250px;
-}
+
 .decoration-vip{
   text-decoration: line-through;
 }
@@ -141,4 +139,14 @@ body {
 }
 .text-sp{
   color: #000a4c;
+}
+
+.ml{
+  margin-left: 10px;
+}
+
+@media (min-width: 1000px) {
+  .ml{
+    margin-left: 250px;
+  }
 }
